<resources>
    <string name="app_name">Janitra App</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="janitra_frozen_food">Janitra Frozen Food</string>
    <string name="title_desc"><![CDATA[Melayani Pesan & Antar\nMakanan Beku]]></string>
    <string name="icon_category">Icon Category</string>
    <string name="kategori">Kategori</string>
    <string name="populer">Populer</string>
    <string name="credit"><![CDATA[By rizkyhamdana & irzankusnan]]></string>
    <string name="cart">Cart</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="gambar_product">Gambar Product</string>
    <string name="order_now">Order Now</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="_1">1</string>
    <string name="rupiah">Rp. </string>
    <string name="favoritkan">Favoritkan</string>
    <string name="hapus_favorit">Hapus favorit</string>
    <string name="order">Order</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="nomor_whatsapp">Nomor Whatsapp</string>
    <string name="nama">Nama</string>
    <string name="qty">Kuantitas:</string>
    <string name="total">Total:</string>
    <string name="delete">Delete</string>
    <string name="insertfavorite">Difavoritkan</string>
    <string name="deletefavorite">Data dihapus dari daftar favorite</string>
    <string name="pesanandiproses">Pesanan berhasil diproses</string>
    <string name="pesananbatal">Pesanan dibatalkan</string>
    <string name="databelumlengkap">Data belum lengkap</string>
    <string name="historyclear">Data riwayat dibersihkan</string>
    <string name="profile">Profile</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="qty_message">Kuantitas harus lebih dari 0</string>
    <string name="cart_message">Data berhasil dimasukkan kedalam cart</string>
    <string name="cancel_login">Login dibatalkan</string>
    <string name="logout">Logout</string>
    <string name="delete_item_message">Berhasil menghapus barang</string>
</resources>